--- a/Apuntes_de_Un_Ingeniero.ipynb
+++ b/Apuntes_de_Un_Ingeniero.ipynb
@@ -26,19 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "que pasoooo\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('que pasoooo  con estoooo')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Gracias Jesús"
    ]
   }
  ],
