--- a/Apuntes_de_Un_Ingeniero.ipynb
+++ b/Apuntes_de_Un_Ingeniero.ipynb
@@ -39,6 +39,59 @@
    "source": [
     "#### Gracias Jesús"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "######  PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git status -s\n",
+    " M Apuntes_de_Un_Ingeniero.ipynb\n",
+    "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git pull\n",
+    "Already up to date.\n",
+    "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git add .\n",
+    "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git status -s\n",
+    "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git commit -m \"holaaaa\"\n",
+    "On branch main\n",
+    "Your branch is ahead of 'origin/main' by 1 commit.\n",
+    "  (use \"git push\" to publish your local commits)\n",
+    "\n",
+    "nothing to commit, working tree clean\n",
+    "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git push\n",
+    "Enumerating objects: 5, done.\n",
+    "Counting objects: 100% (5/5), done.\n",
+    "Delta compression using up to 4 threads\n",
+    "Compressing objects: 100% (3/3), done.\n",
+    "Writing objects: 100% (3/3), 346 bytes | 346.00 KiB/s, done.\n",
+    "Total 3 (delta 1), reused 0 (delta 0), pack-reused 0\n",
+    "remote: Resolving deltas: 100% (1/1), completed with 1 local object.\n",
+    "To https://github.com/luistrotta19/Apuntes.git\n",
+    "   f4fc639..e0b76a3  main -> main\n",
+    "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git commit -m \"holaaaa\"\n",
+    " *  History restored \n",
+    "\n",
+    " M Apuntes_de_Un_Ingeniero.ipynb\n",
+    "warning: LF will be replaced by CRLF in Apuntes_de_Un_Ingeniero.ipynb.\n",
+    "The file will have its original line endings in your working directory\n",
+    "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git status -s\n",
+    "M  Apuntes_de_Un_Ingeniero.ipynb\n",
+    "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git commit -m \"gracias\"\n",
+    "[main 7049703] gracias\n",
+    " 1 file changed, 9 insertions(+), 10 deletions(-)\n",
+    "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git status -s\n",
+    "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git pull\n",
+    "Already up to date.\n",
+    "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git push\n",
+    "Enumerating objects: 5, done.\n",
+    "Counting objects: 100% (5/5), done.\n",
+    "Delta compression using up to 4 threads\n",
+    "Compressing objects: 100% (3/3), done.\n",
+    "Writing objects: 100% (3/3), 366 bytes | 366.00 KiB/s, done.\n",
+    "Total 3 (delta 1), reused 0 (delta 0), pack-reused 0\n",
+    "remote: Resolving deltas: 100% (1/1), completed with 1 local object.\n",
+    "To https://github.com/luistrotta19/Apuntes.git\n",
+    "   e0b76a3..7049703  main -> main\n",
+    "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> "
+   ]
   }
  ],
  "metadata": {
