--- a/Apuntes_de_Un_Ingeniero.ipynb
+++ b/Apuntes_de_Un_Ingeniero.ipynb
@@ -44,19 +44,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "######  PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git status -s\n",
-    " M Apuntes_de_Un_Ingeniero.ipynb\n",
-    "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git pull\n",
-    "Already up to date.\n",
-    "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git add .\n",
-    "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git status -s\n",
-    "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git commit -m \"holaaaa\"\n",
-    "On branch main\n",
-    "Your branch is ahead of 'origin/main' by 1 commit.\n",
-    "  (use \"git push\" to publish your local commits)\n",
+    "#### Secuencias\n",
+    " PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> \n",
+    " <p style= \"color: red\" >git status -s </p>\n",
+    " M Apuntes_de_Un_Ingeniero.ipynb \n",
     "\n",
-    "nothing to commit, working tree clean\n",
-    "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git push\n",
+    "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> \n",
+    "<p style= \"color: blue\" >git add . </p>\n",
+    "\n",
+    "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git status -s\n",
+    "<p style= \"color: orange\" >git status -s </p>\n",
+    "\n",
+    "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git commit -m \"holaaaa\"\n",
+    "<p style= \"color: orange\" >git commit -m \"holaaaa\" </p>\n",
+    "\n",
+    "\n",
+    "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> \n",
+    "<p style= \"color: orange\" >git push </p>\n",
+    "\n",
     "Enumerating objects: 5, done.\n",
     "Counting objects: 100% (5/5), done.\n",
     "Delta compression using up to 4 threads\n",
@@ -66,6 +71,7 @@
     "remote: Resolving deltas: 100% (1/1), completed with 1 local object.\n",
     "To https://github.com/luistrotta19/Apuntes.git\n",
     "   f4fc639..e0b76a3  main -> main\n",
+    "\n",
     "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git commit -m \"holaaaa\"\n",
     " *  History restored \n",
     "\n",
@@ -78,8 +84,7 @@
     "[main 7049703] gracias\n",
     " 1 file changed, 9 insertions(+), 10 deletions(-)\n",
     "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git status -s\n",
-    "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git pull\n",
-    "Already up to date.\n",
+    "\n",
     "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> git push\n",
     "Enumerating objects: 5, done.\n",
     "Counting objects: 100% (5/5), done.\n",
@@ -92,6 +97,13 @@
     "   e0b76a3..7049703  main -> main\n",
     "PS C:\\Users\\thinkpad\\OneDrive\\Escritorio\\pandas\\Apuntes_Ingeniero> "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
