--- a/Apuntes_de_Un_Ingeniero.ipynb
+++ b/Apuntes_de_Un_Ingeniero.ipynb
@@ -99,11 +99,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "###### ejercicio 37"
+   ]
   }
  ],
  "metadata": {
