cambios en el archivo de matrices

--- a/Apuntes_de_Un_Ingeniero.ipynb
+++ b/Apuntes_de_Un_Ingeniero.ipynb
@@ -102,8 +102,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### ejercicio 37"
+    "#### ejercicio 41"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
