--- a/array_matrices/introduccion_array.ipynb
+++ b/array_matrices/introduccion_array.ipynb
@@ -40,6 +40,40 @@
     "array.remove(4)\n",
     "array"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[ 4.,  6.,  8.],\n",
+       "        [10., 12., 14.],\n",
+       "        [14., 16., 18.]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "matrizA = np.mat([[1,2,3],[4,5,6],[7,8,9]], float)\n",
+    "matrizB = np.mat([[3,4,5],[6,7,8],[7,8,9]], float)\n",
+    "suma = matrizA + matrizB\n",
+    "suma"
+   ]
   }
  ],
  "metadata": {
