multiplicación de matrices

--- a/Apuntes_de_Un_Ingeniero.ipynb
+++ b/Apuntes_de_Un_Ingeniero.ipynb
@@ -102,15 +102,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ejercicio 41"
+    "#### https://www.youtube.com/watch?v=iNLlamYbZsI&list=PLygvT9FY2jClXD10l8RS3JNVybu58__n5&index=42"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### como llenar matrices\n",
+    "###### https://www.youtube.com/playlist?list=PLXmyaEzxglCTDPJZLBGgrOG39Tqmxokh0"
+   ]
   }
  ],
  "metadata": {
