segunda parte generadores

--- a/Curso_Python-master/06. programacion-funcional/generadores/estudio_generadores.ipynb
+++ b/Curso_Python-master/06. programacion-funcional/generadores/estudio_generadores.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Estudio Generadores"
+    "### Estudio Generadores  11:12"
    ]
   },
   {
@@ -22,31 +22,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "def generador():\n",
+    "    yield 1\n",
+    "    print('Reanudando la ejecución')\n",
+    "    print('pescado')\n",
+    "    yield 2\n",
+    "    valor1 = 5\n",
+    "    valor2 = 7\n",
+    "    suma = valor1 + valor2\n",
+    "    yield suma\n",
+    "\n",
+    "gen = generador()\n",
+    "print(type(gen))\n",
+    "print(next(gen))\n",
+    "print(next(gen))\n",
+    "print(next(gen))\n",
+    "\n",
+    "for valor in generador():\n",
+    "    print(f'Valor devuelto {valor} ')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### parte 2: https://www.youtube.com/watch?v=UbaH89D7wxs&list=PLygvT9FY2jClXD10l8RS3JNVybu58__n5&index=51"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "Reanudando la ejecución\n",
-      "pescado\n",
-      "2\n"
+      "Número producido -> 0\n",
+      "Número producido -> 1\n"
      ]
     }
    ],
    "source": [
-    "def generador():\n",
-    "    yield 1\n",
-    "    print('Reanudando la ejecución')\n",
-    "    print('pescado')\n",
-    "    yield 2\n",
-    "gen = generador()\n",
-    "print(next(gen))\n",
-    "print(next(gen))\n",
-    "\n"
+    "rango = int(input('Ingrese el rango de números a generar. '))  # 5\n",
+    "\n",
+    "# Creando el generador de n números\n",
+    "def generador_numeros(rango):\n",
+    "    for numero in range(rango):\n",
+    "        yield numero\n",
+    "\n",
+    "\n",
+    "# Consumiendo el generador\n",
+    "for valor in generador_numeros(rango):\n",
+    "        print(f'Número producido -> {valor}')"
    ]
   }
  ],
