Terminación de módulo de listComprehensions

--- a/Curso_Python-master/06. programacion-funcional/list_comprehensions/list_estudio.ipynb
+++ b/Curso_Python-master/06. programacion-funcional/list_comprehensions/list_estudio.ipynb
@@ -4,22 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### video 52:video 52 List_comprehensions: https://www.youtube.com/watch?v=rrPv6PY39Ws&list=PLygvT9FY2jClXD10l8RS3JNVybu58__n5&index=52"
+    "##### video 52: List_comprehensions: https://www.youtube.com/watch?v=rrPv6PY39Ws&list=PLygvT9FY2jClXD10l8RS3JNVybu58__n5&index=52"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lista pares con list comprehensions -> [0, 4, 16, 36, 64]\n"
-     ]
-    }
-   ],
    "source": [
     "lista_pares = []\n",
     "lista_pares = [numero * numero for numero in range(10) if numero % 2 == 0]\n",
@@ -31,6 +21,53 @@
    "metadata": {},
    "source": [
     "##### video 53 : https://www.youtube.com/watch?v=Dn9aSsW8ZB0&list=PLygvT9FY2jClXD10l8RS3JNVybu58__n5&index=53"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crear un script en Python que permita agregar a una lista o un\n",
+    "# vector los números que sean divisibles entre 2 y entre 6 en un\n",
+    "# rango especificado por el usuario (a, b), esto utilizando list comprehensions.\n",
+    "\n",
+    "# Realizando el ejercicio sin list comprehensions.\n",
+    "A = int(input('Ingrese el límite inferior del rango '))  # 4\n",
+    "B = int(input('Ingrese el límite superior del rango '))  # 30\n",
+    "vector = []\n",
+    "\n",
+    "for i in range(A, B, 1):\n",
+    "    if i % 2 == 0 and i % 6 == 0:\n",
+    "        vector.append(i)\n",
+    "\n",
+    "print(\n",
+    "    f'Vector números divisibles entre 2 y 6 en un rango {A}, {B} -> {vector}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solución del ejercicio empleando List Comprehensions\n",
+    "vector = [numero for numero in range(\n",
+    "    A, B, 1) if numero % 2 == 0 if numero % 6 == 0]\n",
+    "print(\n",
+    "    f'LVector números divisibles entre 2 y 6 en un rango {A}, {B} -> {vector}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Listas Anidadas Video 54: https://www.youtube.com/watch?v=bBK0L6oz5Jw&list=PLygvT9FY2jClXD10l8RS3JNVybu58__n5&index=54\n",
+    "\n",
+    "#### 8:53\n",
+    "\n",
+    "### Para comentar muchas lineas con # Ctrl + k + c // Para descomentarlas Ctrl + k + u"
    ]
   }
  ],
